--- a/Artemis-Installer/Artemis-Installer.csproj
+++ b/Artemis-Installer/Artemis-Installer.csproj
@@ -6,6 +6,29 @@
     <RootNamespace>Artemis_Installer</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <PlatformTarget>x64</PlatformTarget>
+    <PackageIcon>logo.png</PackageIcon>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Imagez\BlurredFull.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="logo.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Imagez\BlurredFull.jpg" />
+    <Resource Include="Imagez\logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Imagez\logo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
